fix: change game, playRound and getComputerChoice

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <title>Rock Paper Scissors</title>
 </head>
 <body>
-  <script src="./js/game.js"></script>
+  <script type="module" src="./js/game.js" />
 </body>
 </html>
