feat: add page body and images

--- a/index.html
+++ b/index.html
@@ -4,9 +4,33 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Rock Paper Scissors</title>
+  <title>Water Ice Fire</title>
 </head>
 <body>
-  <script type="module" src="./js/game.js" />
+  <header>
+    <h1>Water Ice Fire</h1>
+    <p>Choose your power:</p>
+  </header>
+  <main>
+    <ul>
+      <li><img src="./assets/images/water-1.png" alt="waves"/></li>
+      <li><img src="./assets/images/snow-1.png" alt="Ice"/></li>
+      <li><img src="./assets/images/fire-1.png" alt="fire"/></li>
+    </ul>
+    <hr>
+    <div>
+      <div>
+        <h3>Your enemy:</h3> 
+        <img src="./assets/images/enemy.png" alt="enemy">
+      </div>
+      <div>
+        <p>Round: </p>
+        <p>Your lives: </p>
+        <p>Enemys's lives: </p>
+      </div>
+    </div>
+  </main>
+  <footer></footer>
+  <script src="./js/game.js"></script>
 </body>
 </html>
