--- a/index.html
+++ b/index.html
@@ -4,29 +4,31 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/style.css">
   <title>Water Ice Fire</title>
 </head>
 <body>
   <header>
-    <h1>Water Ice Fire</h1>
-    <p>Choose your power:</p>
+    <h1 class="header-title"><span class="water">Water</span> <span class="ice">Ice</span> <span class="fire">Fire</span></h1>
+    <p>Choose your power and kill the enemy!</p>
   </header>
   <main>
-    <ul>
-      <li><img src="./assets/images/water-1.png" alt="waves"/></li>
-      <li><img src="./assets/images/snow-1.png" alt="Ice"/></li>
-      <li><img src="./assets/images/fire-1.png" alt="fire"/></li>
+    <ul class="powers">
+      <li><img class="element-width" src="./assets/images/water-1.png" alt="waves"/></li>
+      <li><img class="element-width" src="./assets/images/snow-1.png" alt="Ice"/></li>
+      <li><img class="element-width" src="./assets/images/fire-1.png" alt="fire"/></li>
     </ul>
     <hr>
-    <div>
-      <div>
+    <div class="info">
+      <div class="enemy">
         <h3>Your enemy:</h3> 
         <img src="./assets/images/enemy.png" alt="enemy">
       </div>
-      <div>
-        <p>Round: </p>
-        <p>Your lives: </p>
-        <p>Enemys's lives: </p>
+      <div class="game-stats">
+        <p>Round: <span>0</span></p>
+        <p>Your lives: <span>5</span></p>
+        <p>Enemys's lives: <span>5</span></p>
+        <p>Combat Area: <span>Empty</span></p>
       </div>
     </div>
   </main>
