fix: enemy image width

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="info">
       <div class="enemy">
         <h3>Your enemy:</h3> 
-        <img src="./assets/images/enemy.png" alt="enemy">
+        <img src="./assets/images/enemy.png" class="element-width" alt="enemy">
       </div>
       <div class="game-stats">
         <p>Round: <span>0</span></p>
