--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
   </main>
   <footer>
-    <h3>By nathcarnevalli</h3>
+    <h3>Copyright © nathcarnevalli 2023</h3>
   </footer>
   <script src="./js/game.js"></script>
 </body>
