fix: footer copyright

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
   </main>
   <footer>
-    <h3>Copyright © nathcarnevalli 2023</h3>
+    <a href="https://github.com/nathcarnevalli?tab=repositories"><h3>Copyright © nathcarnevalli 2023</h3></a>
   </footer>
   <script src="./js/game.js"></script>
 </body>
